First page and some improvements

--- a/index.html
+++ b/index.html
@@ -3,6 +3,62 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>LensLock - Professional Image Delivery for Photographers</title>
+  <meta name="description"
+    content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
+  <meta name="keywords" content="photography, image delivery, client gallery, photo sharing, secure storage">
+  <meta name="author" content="LensLock">
+  <link rel="shortcut icon" type="image/x-icon" href="/icon.ico" />
+
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lenslock.vercel.app/">
+  <meta property="og:title" content="LensLock - Professional Image Delivery for Photographers">
+  <meta property="og:description"
+    content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
+  <meta property="og:image" content="https://lenslock.vercel.app/images/social-preview.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://lenslock.vercel.app/">
+  <meta name="twitter:title" content="LensLock - Professional Image Delivery for Photographers">
+  <meta name="twitter:description"
+    content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
+  <meta name="twitter:image" content="https://lenslock.vercel.app/images/social-preview.jpg">
+  <meta name="twitter:creator" content="@lenslock">
+
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://lenslock.vercel.app/">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+
+  <!-- Noscript fallback -->
+  <noscript>
+    <div style="text-align: center; padding: 2rem;">
+      <h1>LensLock</h1>
+      <p>JavaScript is required to run this application. Please enable JavaScript to continue.</p>
+      <p>Or visit our <a href="https://lenslock.vercel.app">status page</a> if you're having issues.</p>
+    </div>
+  </noscript>
+</body>
+
+</html>
+
+<!-- <!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
   <link rel="shortcut icon" type="image/x-icon" href="/icon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lens-Lock</title>
@@ -13,4 +69,4 @@
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
-</html>
+</html> -->
