First page and some improvements

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
 
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://lenslock.vercel.app/">
+  <meta property="og:url" content="https://lens-lock.vercel.app/">
   <meta property="og:title" content="LensLock - Professional Image Delivery for Photographers">
   <meta property="og:description"
     content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
-  <meta property="og:image" content="https://lenslock.vercel.app/images/social-preview.jpg">
+  <meta property="og:image" content="https://lens-lock.vercel.app/icon.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://lenslock.vercel.app/">
+  <meta name="twitter:url" content="https://lens-lock.vercel.app/">
   <meta name="twitter:title" content="LensLock - Professional Image Delivery for Photographers">
   <meta name="twitter:description"
     content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
-  <meta name="twitter:image" content="https://lenslock.vercel.app/images/social-preview.jpg">
+  <meta name="twitter:image" content="https://lens-lock.vercel.app/icon.png">
   <meta name="twitter:creator" content="@lenslock">
 
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://lenslock.vercel.app/">
+  <link rel="canonical" href="https://lens-lock.vercel.app/">
 
 </head>
 
@@ -47,7 +47,7 @@
     <div style="text-align: center; padding: 2rem;">
       <h1>LensLock</h1>
       <p>JavaScript is required to run this application. Please enable JavaScript to continue.</p>
-      <p>Or visit our <a href="https://lenslock.vercel.app">status page</a> if you're having issues.</p>
+      <p>Or visit our <a href="https://lens-lock.vercel.app">status page</a> if you're having issues.</p>
     </div>
   </noscript>
 </body>
