--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,12 @@
     content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
   <meta name="keywords" content="photography, image delivery, client gallery, photo sharing, secure storage">
   <meta name="author" content="LensLock">
-  <link rel="shortcut icon" type="image/x-icon" href="/icon.ico" />
+
+  <link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:type" content="website">
@@ -19,7 +24,7 @@
   <meta property="og:title" content="LensLock - Professional Image Delivery for Photographers">
   <meta property="og:description"
     content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
-  <meta property="og:image" content="https://lens-lock.vercel.app/icon.png">
+  <meta property="og:image" content="https://lens-lock.vercel.app/social-preview.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
@@ -29,7 +34,7 @@
   <meta name="twitter:title" content="LensLock - Professional Image Delivery for Photographers">
   <meta name="twitter:description"
     content="Beautiful and effective tool for photographers to store, share, and deliver images to clients securely.">
-  <meta name="twitter:image" content="https://lens-lock.vercel.app/icon.png">
+  <meta name="twitter:image" content="https://lens-lock.vercel.app/social-preview.jpg">
   <meta name="twitter:creator" content="@lenslock">
 
 
@@ -53,20 +58,3 @@
 </body>
 
 </html>
-
-<!-- <!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="shortcut icon" type="image/x-icon" href="/icon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lens-Lock</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
-</html> -->
